Added image to main page, added image and description to a blueberry cake recipe page

--- a/recipes/blueberry-cake.html
+++ b/recipes/blueberry-cake.html
@@ -10,5 +10,9 @@
 </head>
 <body>
     <h1>Blueberry cake</h1>
+    <img src="../images/blueberry-cake.jpg" alt="Blueberry cake image">
+    <h3>This is a <strong>delicious</strong> blueberry cake made with fresh blueberries</h3>
+    <p>Very nice old fashion type recipe.</p>
+    <p>The cake is not too sweet at all and is also great with coffee.</p>
 </body>
 </html>
