--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Odin recipes</title>
 </head>
 <body>
-    <h1>Odin recipes</h1>
+    <h1>Odin recipes you must try</h1>
+    <img src="images/main-page-photo.jpeg" alt="Funny chef picture">
     <a href="recipes/blueberry-cake.html">Blueberry cake</a>
 </body>
 </html>
