--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Odin recipes you must try</h1>
-    <img src="images/main-page-photo.jpeg" alt="Funny chef picture">
+    <img src="images/main-page-photo.jpeg" alt="Funny chef picture" width="300px" height="300px">
+    <br>
     <a href="recipes/blueberry-cake.html">Blueberry cake</a>
 </body>
 </html>
