--- a/recipes/blueberry-cake.html
+++ b/recipes/blueberry-cake.html
@@ -9,10 +9,32 @@
     </title>
 </head>
 <body>
-    <h1>Blueberry cake</h1>
+    <h1 id="beginning">Blueberry cake</h1>
     <img src="../images/blueberry-cake.jpg" alt="Blueberry cake image">
     <h3>This is a <strong>delicious</strong> blueberry cake made with fresh blueberries</h3>
     <p>Very nice old fashion type recipe.</p>
     <p>The cake is not too sweet at all and is also great with coffee.</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>2 cups all-purpose flour</li>
+        <li>2 teaspoons baking powder</li>
+        <li>1 cup white sugar</li>
+        <li>¼ teaspoon salt</li>
+        <li>⅓ cup shortening</li>
+        <li>¾ cup milk</li>
+        <li>1 egg</li>
+        <li>1 teaspoon lemon zest</li>
+        <li>1 cup blueberries</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Preheat oven to 350 degrees F (175 degrees C). Grease an 8x8-inch pan.</li>
+        <li>Sift flour, baking powder, sugar, and salt together in a large bowl. Beat shortening in a separate bowl until creamy; stir into flour mixture, alternating with milk. Beat flour-shortening mixture until mixed, about 2 minutes. Add egg and beat until mixed, about 1 minute.</li>
+        <li>Combine lemon zest with blueberries in a bowl; fold into batter. Pour batter into prepared pan.</li>
+        <li>Bake in the preheated oven until a toothpick inserted in the center comes out clean, about 50 minutes.</li>
+    </ol>
+    <a href="#beginning">Return to the top of the page</a>
+    <br>
+    <a href="../index.html">Return to the main page</a>
 </body>
 </html>
