--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <h1>Odin recipes you must try</h1>
     <img src="images/main-page-photo.jpeg" alt="Funny chef picture" width="300px" height="300px">
     <br>
+    <ul>
+        <li><a href="recipes/blueberry-cake.html">Blueberry cake</a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+    </ul>
     <a href="recipes/blueberry-cake.html">Blueberry cake</a>
 </body>
 </html>
