--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <br>
     <ul>
         <li><a href="recipes/blueberry-cake.html">Blueberry cake</a></li>
-        <li><a href=""></a></li>
+        <li><a href="recipes/cheesecake.html">Cheesecake</a></li>
         <li><a href=""></a></li>
     </ul>
-    <a href="recipes/blueberry-cake.html">Blueberry cake</a>
 </body>
 </html>
