--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1>Odin recipes you must try</h1>
     <img src="images/main-page-photo.jpeg" alt="Funny chef picture" width="300px" height="300px">
     <br>
-    <h3>List of recepies for my favorite deserts!</h3>
+    <h3>List of recipes for my favorite deserts!</h3>
     <ul>
         <li><a href="recipes/blueberry-cake.html">Blueberry cake</a></li>
         <li><a href="recipes/cheesecake.html">Cheesecake</a></li>
-        <li><a href=""></a></li>
+        <li><a href="recipes/chocolate-cake.html">Chocolate cake</a></li>
     </ul>
 </body>
 </html>
