Added return to the top of the page in main page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Odin recipes</title>
 </head>
 <body>
-    <h1>Odin recipes you must try</h1>
+    <h1 id="beginning">Odin recipes you must try</h1>
     <img src="images/main-page-photo.jpeg" alt="Funny chef picture" width="300px" height="300px">
     <br>
     <h3>List of recipes for my favorite deserts!</h3>
@@ -16,5 +16,6 @@
         <li><a href="recipes/cheesecake.html">Cheesecake</a></li>
         <li><a href="recipes/chocolate-cake.html">Chocolate cake</a></li>
     </ul>
+    <a href="#beginning">Return to the top of the page</a>
 </body>
 </html>
